OOP improved on project. Much better organization and functionality!