@@ -1,7 +1,11 @@
 package main;
+import java.util.List;
+import java.util.Arrays;
 
-public class Main {
-  public static void main(String[] args) {
+class Main
+{
+  public static void main(String[] args)
+  {
     Robot bot = new Robot();
     /*  
         true -> ativa ação
@@ -11,21 +15,19 @@ public class Main {
         segundo param: right_limb              
         
         */
-    try{
-      bot.blink(true, false);
-      bot.blink(false, true);
-      bot.raiseArms(true, true);
-      bot.raiseArms(true, false);
-      bot.raiseArms(false, true);
-      //List<String> actions = new List<String>(List.of("blink_left","raise_left"));
+
+
+      bot.performAction(Robot.Action.BLINK_RIGHT);
+      bot.performAction(Robot.Action.BLINK_LEFT);
+      bot.performAction(Robot.Action.RAISE_LEFT);
+      bot.performAction(Robot.Action.RAISE_RIGHT);
+      bot.performAction(Robot.Action.BLINK_BOTH);
+
+
+      List<String> actions = Arrays.asList("blink_left","raise_left");
       //bot.simultActions(actions);
       System.out.println("\n\n\tEnding robot");
-    }
-    catch (NullPointerException e){
-      System.out.println("NULO");
-      e.printStackTrace();
-    }
 
- 
+
   }
 }
